--- a/resources/styles.css
+++ b/resources/styles.css
@@ -27,6 +27,7 @@
 
 html {
 	height:100%;
+	background-color: #333333;
 }
 body {
 	margin:0;
@@ -385,7 +386,7 @@ textarea {
 }
 .tallblock {
 	margin: 0 30%;
-	padding-top: 20px;
+	padding-top: 150px;
 	display:block;
 }
 .textnugget {
@@ -404,6 +405,9 @@ textarea {
 .mainArtist .barrel {
 	padding-bottom:20px;
 	height: calc(100% - 334px);
+}
+h4 a {
+	color: rgb(219, 219, 219);
 }
 /*-------------------------------------*/
 .footgroup {
@@ -471,7 +475,8 @@ footer p {
 		display:block;
 		height: 20px;
 		padding: 10px 5px;
-		border-radius: 4px;
+		border-radius: 8px;
+		margin-top: 40px;
 	}
 	.colm {
 		float:left;
@@ -534,6 +539,9 @@ footer p {
 	}
 	.brickClear {
 		display:none;
+	}
+	.intro img {
+		max-width: 80vw;
 	}
 }
 /* Short Window */
