--- a/resources/styles.css
+++ b/resources/styles.css
@@ -212,6 +212,13 @@ nav .active {
 	animation: spin 2s linear infinite;
 	transition: all ease-in-out 0.6s;
 }
+h4 a {
+	color: rgb(219, 219, 219);
+}
+.mainFront a {
+	text-decoration: underline;
+	color:rgb(168, 168, 168);
+}
 /*-------------------------------------*/
 .contactblock {
 	margin: auto auto;
@@ -315,7 +322,7 @@ textarea {
 	color:red;
 }
 
-/*-------------------------------------*/
+/*--------Portfolio-----------------------*/
 .folio {
 	width:100%;
 	color:rgb(219, 219, 219);
@@ -372,13 +379,14 @@ textarea {
 	transition: all 0.6s ease-out;
 
 }
-/*-------------------------------------*/
+/*-----Artist Page--------------------------------*/
 .mainArtist {
 	margin:0;
 	min-height: 420px;
 	background: #424242;
 	color:rgb(219, 219, 219);
 }
+
 .mainArtist img {
 	width:100%;
 	border-radius: 12px;
@@ -406,10 +414,36 @@ textarea {
 	padding-bottom:20px;
 	height: calc(100% - 334px);
 }
-h4 a {
-	color: rgb(219, 219, 219);
+
+/*--------Video Port------------*/
+.videoBody {
+	margin:0;
+	min-height: 420px;
+	background: #424242;
+	color:rgb(219, 219, 219);
+	display: block;
 }
-/*-------------------------------------*/
+.videoBody iframe {
+	display:inline-flex;
+	padding: 5px 10px 5px 0;
+	width: 100%;
+	aspect-ratio: 16/9;
+	max-width: 500px;
+	max-height: 280px;
+}
+.videoGallery {
+	max-width:100%;
+	overflow-x: scroll;
+	display:inline-flex;
+}
+.videoBody h1 {
+	font-size: 30px;
+}
+.headerFiller {
+	height:110px;
+}
+
+/*-----Footer--------------------------------*/
 .footgroup {
     width:180px;
     float:left;
